force-app/main/default/objects/Opportunity/fields/AcctSeed__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Summary of the Opportunity Product Line’s&apos; Tax Amount fields</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>