force-app/main/default/objects/Opportunity/fields/AcctSeed__Total_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_with_Tax__c</fullName>
    <formula>Amount +  AcctSeed__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grand Total for Opportunity.</inlineHelpText>
    <label>Total with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>