force-app/main/default/objects/Opportunity/fields/Capture_Energy_Profile__c.field-meta.xml
<CustomField>
    <fullName>Capture_Energy_Profile__c</fullName>
    <label>Capture Energy Profile</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Family with school-age children</fullName>
            </value>
            <value>
                <fullName>Family with infants or pre-school children</fullName>
            </value>
            <value>
                <fullName>Single or two person household</fullName>
            </value>
            <value>
                <fullName>Retirees or working from home</fullName>
            </value>
            <value>
                <fullName>Night time focused consumption</fullName>
            </value>
            <value>
                <fullName>Constant energy consumption</fullName>
            </value>
            <value>
                <fullName>Evening focused consumption</fullName>
            </value>
            <value>
                <fullName>Weekdays focused consumption</fullName>
            </value>
            <value>
                <fullName>commercial (Shopping hours)</fullName>
            </value>
            <value>
                <fullName>Custom profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>