force-app/main/default/objects/Opportunity/fields/DNO_Name__c.field-meta.xml
<CustomField>
    <fullName>DNO_Name__c</fullName>
    <inlineHelpText>Distribution Network Operator</inlineHelpText>
    <label>DNO Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Grid</fullName>
            </value>
            <value>
                <fullName>Northern Powergrid</fullName>
            </value>
            <value>
                <fullName>Electricity Northwest</fullName>
            </value>
            <value>
                <fullName>Scottish Power Energy Networks</fullName>
            </value>
            <value>
                <fullName>Scottish and Southern Electricity Networks</fullName>
            </value>
            <value>
                <fullName>Independent DNO Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>