force-app/main/default/objects/Opportunity/fields/Existing_Electric_car__c.field-meta.xml
<CustomField>
    <fullName>Existing_Electric_car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Electric Car</label>
    <type>Checkbox</type>
</CustomField>