force-app/main/default/objects/Opportunity/fields/Feedback_About_Design__c.field-meta.xml
<CustomField>
    <fullName>Feedback_About_Design__c</fullName>
    <label>Feedback About Design</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>