force-app/main/default/objects/Opportunity/fields/Heat_Pump__c.field-meta.xml
<CustomField>
    <fullName>Heat_Pump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heat Pump</label>
    <type>Checkbox</type>
</CustomField>