force-app/main/default/objects/Opportunity/fields/Job_Background__c.field-meta.xml
<CustomField>
    <fullName>Job_Background__c</fullName>
    <label>Job Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>