force-app/main/default/objects/Opportunity/fields/MPAN1__c.field-meta.xml
<CustomField>
    <fullName>MPAN1__c</fullName>
    <inlineHelpText>Meter Point Administration Number</inlineHelpText>
    <label>MPAN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>