force-app/main/default/objects/Opportunity/fields/Prioritisation_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Prioritisation_of_Opportunity__c</fullName>
    <label>Prioritisation of Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>