force-app/main/default/objects/Opportunity/fields/Service_appointment_created__c.field-meta.xml
<CustomField>
    <fullName>Service_appointment_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service appointment created</label>
    <type>Checkbox</type>
</CustomField>