force-app/main/default/objects/Opportunity/fields/Site_Photo__c.field-meta.xml
<CustomField>
    <fullName>Site_Photo__c</fullName>
    <label>Site Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>