force-app/main/default/objects/Opportunity/fields/Site_Visit_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Start_Date_Time__c</fullName>
    <label>Site Visit Start Date/Time</label>
    <type>DateTime</type>
</CustomField>