force-app/main/default/objects/Opportunity/fields/Solar_PV__c.field-meta.xml
<CustomField>
    <fullName>Solar_PV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar PV</label>
    <type>Checkbox</type>
</CustomField>