force-app/main/default/objects/Opportunity/fields/Structural_Survey_Report__c.field-meta.xml
<CustomField>
    <fullName>Structural_Survey_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Structural Survey Report</label>
    <type>Checkbox</type>
</CustomField>