force-app/main/default/objects/Opportunity/fields/Technicians__c.field-meta.xml
<CustomField>
    <fullName>Technicians__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicians</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceResource.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ServiceResource.ResourceType</field>
            <operation>equals</operation>
            <value>Technician, Crew</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>