force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Mandatory_for_Opp_Closed_Sta.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Mandatory_for_Opp_Closed_Sta</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Closed Lost&apos;) &amp;&amp; ISPICKVAL(Loss_Reason__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please select a value for Loss Reason before closing an Opportunity as &quot;Closed Lost.&quot;</errorMessage>
</ValidationRule>