force-app/main/default/objects/Opportunity/validationRules/Site_Visit_End_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_End_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Site_Visit_End_Date_Time__c ) &amp;&amp; NOT(ISNULL( Site_Visit_Start_Date_Time__c ))</errorConditionFormula>
    <errorDisplayField>Site_Visit_End_Date_Time__c</errorDisplayField>
    <errorMessage>Both scheduled start and end are required</errorMessage>
</ValidationRule>