force-app/main/default/objects/Opportunity/validationRules/Site_visit_stage_Service_appo_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_visit_stage_Service_appo_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( StageName ,&apos;Review Design&apos;) &amp;&amp;  Service_appointment_created__c = false</errorConditionFormula>
    <errorMessage>Please complete the Service Appointment</errorMessage>
</ValidationRule>