force-app/main/default/objects/Opportunity/validationRules/startTimeShouldPrecedeEndTime.validationRule-meta.xml
<ValidationRule>
    <fullName>startTimeShouldPrecedeEndTime</fullName>
    <active>true</active>
    <errorConditionFormula>Site_Visit_End_Date_Time__c   &lt;=   Site_Visit_Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Site_Visit_Start_Date_Time__c</errorDisplayField>
    <errorMessage>The site visit Start must be earlier than the site visit End.</errorMessage>
</ValidationRule>